k8s/setup/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: thetrains
  labels:
    app: mongo
spec:
  type: NodePort
  ports:
    - port: 27017
  selector:
    app: mongo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: thetrains
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-volume
              mountPath: /data/db
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: mongo-pvc
