k8s/setup/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thetrains-app
  namespace: thetrains
  labels:
    app: thetrains-app
spec:
  selector:
    app: thetrains-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
